--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1 class="text-4xl font-bold">Dr. Yitbarek Alemu, MD</h1>
     <p class="mt-2 text-lg">General Practitioner | Lifestyle & Preventive Medicine | Researcher</p>
     <div class="mt-6">
-      <a href="/docs/CV-yitbarek-MD.pdf" class="btn-primary mx-2">Download CV</a>
+      <a href="docs/CV-yitbarek-MD.pdf" class="btn-primary mx-2">Download CV</a>
       <a href="#contact" class="btn-secondary mx-2">Contact</a>
     </div>
   </header>
