--- a/index.html
+++ b/index.html
@@ -53,7 +53,15 @@
     <div id="project-filters" class="flex flex-wrap gap-2 mb-6"></div>
     <div id="project-gallery" class="grid gap-6 sm:grid-cols-2 md:grid-cols-3"></div>
   </section>
-
+  
+<!-- Media Section -->
+<section id="media" class="max-w-4xl mx-auto px-4 py-12">
+  <h2 class="text-3xl font-bold text-blue-900 mb-6">Media</h2>
+  <div class="aspect-w-16 aspect-h-9">
+    <iframe class="w-full h-64 sm:h-96" src="https://www.youtube.com/embed/8Rc812axrHIUUe5R" title="YouTube video" frameborder="0" allowfullscreen></iframe>
+  </div>
+</section>
+  
   <!-- CONTACT -->
   <section id="contact" class="bg-gray-100 py-10">
     <div class="max-w-xl mx-auto px-4">
