--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <section id="media" class="max-w-4xl mx-auto px-4 py-12">
   <h2 class="text-3xl font-bold text-blue-900 mb-6">Media</h2>
   <div class="aspect-w-16 aspect-h-9">
-    <iframe class="w-full h-64 sm:h-96" src="https://www.youtube.com/embed/8Rc812axrHIUUe5R" title="YouTube video" frameborder="0" allowfullscreen></iframe>
+    <iframe class="w-full h-64 sm:h-96" src="https://www.youtube.com/embed/-61bgDGpvJU?si=8Rc812axrHIUUe5R" title="YouTube video" frameborder="0" allowfullscreen></iframe>
   </div>
 </section>
   
